# phabstats

./: .drone.yml  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
phabstats/: __init__.py
phabstats/phab/: data.py  processors.py
phabstats/settings/: __init__.py  dev.tpl
phabstats/slack/: __init__.py
phabstats/stats/: __init__.py  base.py  most_accept_reject.py  most_diffs.py
