[tool.poetry]
name = "phabstats"
version = "0.1.0"
description = ""
authors = ["Eric Prykhodko <eprykhodko@bcdtriptech.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
phabricator = "^0.7.0"
funcy = "^1.13"
httpx = "^0.7.5"
pyparsing = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.8"

[tool.poetry.scripts]
send-stats = "phabstats:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

